# reshane.github.io

./: .gitignore  Cargo.toml  index.html  index.js  package-lock.json  package.json  post_data.json  post_template.html  renderer.js  site_data.json  webpack.config.js
.cargo/: config.toml
.github/workflows/: deploy-pages.yaml
demos/aoc-24-day15/: Cargo.toml  package-lock.json
demos/aoc-24-day15/src/: input.rs  lib.rs
demos/aoc-24-day16/: Cargo.toml  index.html  package-lock.json
demos/aoc-24-day16/src/: input.rs  lib.rs
demos/maze-gen/: Cargo.toml  index.html
demos/maze-gen/.cargo/: config.toml
demos/maze-gen/src/: lib.rs
mkd/: Cargo.toml  build.rs
mkd/src/: lib.rs  post_data.rs  site_data.rs
mkd/templates/: post.html
posts/aoc-24/: index.md
posts/aoc-25/: index.md
posts/convolution/: index.md
posts/fourier-transforms/: index.md
posts/fourier-transforms/images/: 3_dft_vs_fft.webm  6_stinky_request_primes_run.webm
posts/golang-strings/: index.md
posts/image-resizing/: index.md
site/: Cargo.toml  build.rs  index.html  shell.nix
site/posts/20241106_image_resizing/: blog.md
site/posts/20241106_image_resizing/images/: 3_exit_dirty_bash.webm
site/posts/20241113_convolution/: blog.md
site/posts/20241125_fourier_transforms/images/: 5_primes_run.webm  7_original_restored.webm
site/posts/20241227_aoc_24/: blog.md
site/posts/convolution_20241113/: blog.md
site/posts/convolution_20241113/images/: 5_initial_run.webm
site/posts/image_resizing_20241106/: blog.md
site/src/: main.rs
