[workspace]
resolver = "2"
members = ["mkd"]

[profile.release]
lto = true

[workspace.dependencies]
askama = "0.12"
askama-markdown-cmark = "0.1.0"
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
serde-wasm-bindgen = "0.6.5"

[workspace.dependencies.web-sys]
version = "0.3.77"
features = [
    'CanvasRenderingContext2d',
    'Document',
    'Element',
    'HtmlCanvasElement',
    'Window',
    'DedicatedWorkerGlobalScope',
    'CssStyleDeclaration',
    'NodeList',
    'Event',
    'HtmlElement',
    'Request',
    'Response',
    'Headers',
    'RequestInit',
    'RequestMode',
    'console',
]
