[workspace]
resolver = "2"
members = ["mkd", "demos/aoc-24-day15", "demos/aoc-24-day16", "demos/maze-gen"]

[profile.release]
lto = true

[workspace.dependencies]
askama = "0.12"
askama-markdown-cmark = "0.1.0"
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
serde-wasm-bindgen = "0.6.5"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

[workspace.dependencies.web-sys]
version = "0.3.77"
features = [
    'CanvasRenderingContext2d',
    'Document',
    'Element',
    'HtmlCanvasElement',
    'Window',
    'DedicatedWorkerGlobalScope',
    'CssStyleDeclaration',
    'NodeList',
    'Event',
    'HtmlElement',
    'Request',
    'Response',
    'Headers',
    'RequestInit',
    'RequestMode',
    'console',
]
